# Alpha

./: AST.cpp  CMakeLists.txt  README.md  main.cpp  manual  tokenizer.cpp
AST/: AST.cpp  AST.h
Error/: Error.cpp  Error.h
Expression/: Expression.cpp  Expression.h
Interpreter/: Interpreter.cpp  Interpreter.h
Lexer/: Lexer.cpp  Lexer.h
Parser/: Parser.cpp  Parser.h
Token/: Token.cpp  Token.h  TokenType.h  tokenizer.cpp  tokenizer.h
